@@ -316,6 +316,8 @@ struct u_achieve achieve = DUMMY;
 struct realtime_data realtime_data = { 0, 0, 0 };
 #endif
 
+struct _plinemsg *pline_msg = NULL;
+
 /* dummy routine used to force linkage */
 void
 decl_init()
